# feint-llvm

./: .envrc  .gitignore  .ocamlformat  Feint.fsproj  Feint.sln  Makefile  Program.fs  README.md  dune-project  example.fi  feint.opam
lib/: ast.ml  driver.ml  dune  interpreter.ml  lexer.mll  lexerUtil.ml  parser.mly  parserMessages.messages
test/: dune
