(library
 (name feint)
 (modules ast driver lexer parser parserMessages unitActionsParser)
 (libraries menhirLib)
 (flags -w A-4-70))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags -lg 1 -la 1 -lc 2))

(rule
 (action
  (with-stdout-to
   unitActionsParser.mly
   (run menhir %{dep:parser.mly} --only-preprocess-u))))

(menhir
 (modules unitActionsParser)
 (flags --table --external-tokens Parser))

(rule
 (deps parserMessages.check)
 (action
  (with-stdout-to
   parserMessages.ml
   (run
    menhir
    %{dep:parser.mly}
    --compile-errors
    %{dep:parserMessages.messages}))))

(rule
 (with-stdout-to
  parserMessages.auto.messages
  (run menhir %{dep:parser.mly} --list-errors)))

(rule
 (with-stdout-to
  parserMessages.check
  (run
   menhir
   %{dep:parser.mly}
   --compare-errors
   %{dep:parserMessages.auto.messages}
   --compare-errors
   %{dep:parserMessages.messages})))
